# sniff

./: .gitignore  .gitlab-ci.yml  README.md  devbox.json  pyproject.toml
sniff/: logger.py  params.py  parser.py  reader.py  sender.py  ubus.py
sniff/cli/: config.py  sniff.py
